--- a/code/03-interactions-assignment.html
+++ b/code/03-interactions-assignment.html
@@ -126,6 +126,10 @@ $(document).ready(function () {
 <p><br></p>
 <div id="assignment" class="section level3">
 <h3>Assignment</h3>
+<div id="returning-to-the-assignment-from-last-time-on-a-positive-bias-of-a-post-treatment-variable-on-your-effect-of-interest-try-to-come-up-with-a-real-world-example-to-illustrate-this-mechanism" class="section level4">
+<h4>0. Returning to the assignment from last time on a positive bias of a post-treatment variable on your effect of interest, try to come up with a real-world example to illustrate this mechanism!</h4>
+<p><br></p>
+</div>
 <div id="think-through-the-equation-again-that-braumoeller-2004-uses-to-illustrate-how-scaling-of-a-mediating-variable-matters-for-main-effects-in-the-regression-model-just-think-through-it-you-dont-have-to-write-anything-up.-then-replicate-the-results-from-the-motivating-setup-braumoeller-2004-io-58-uses-to-make-his-point-and-that-leads-to-table-1.-use-the-parameters-from-footnote-1" class="section level4">
 <h4>1. Think through the equation again that Braumoeller (2004) uses to illustrate how scaling of a mediating variable matters for main effects in the regression model (Just think through it, you don’t have to write anything up). Then, replicate the results from the motivating setup Braumoeller (2004, IO 58) uses to make his point and that leads to Table 1. Use the parameters from footnote 1!</h4>
 <p><br></p>
