--- a/code/06-panel-data-assignment.html
+++ b/code/06-panel-data-assignment.html
@@ -151,6 +151,11 @@ $(document).ready(function () {
 <ol start="3" style="list-style-type: lower-alpha">
 <li>Does the Hausman test suggest to use the RE model or rather to stay with the FE model? Try to adapt the model in a way that, according to the Hausman test, allows you to use an RE model!</li>
 </ol>
+<p><br></p>
+</div>
+<div id="learning-more-r" class="section level5">
+<h5>4. Learning more R</h5>
+<p>Work through the script <code>01-r-primer-split-apply-combine.r</code> to learn more about the split-apply-combine workflow in R!</p>
 </div>
 </div>
 
